examples/test/testpolicy16363.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16363
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key11: value29
      key43: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value38
      podSelector:
        matchLabels:
          key16: value15
          key26: value8
